# Atlas

./: .gitignore  ALPACA_DIRECTORY_STRUCTURE.md  ALPACA_INTEGRATION_SUMMARY.md  ALPACA_QUICK_REFERENCE.md  COMPLETION_REPORT.md  README.md  debug_features.py  fix_bom.py  fix_engine.py  process_features.py  process_features2.py  pyproject.toml  remove_bom.py  requirements-alpaca.txt  requirements.txt  run_tests.py  syntax_check.py  test.txt  test_backtest.py  test_decision.py  test_yaml.py  tester.py  transform.py  verify_integration.py
api/: endpoints.py  server.py
atlas_quant/: exceptions.py
atlas_quant/analytics/: drawdown.py  metrics.py  returns.py
atlas_quant/backtesting/: benchmarks.py  broker.py  engine.py  experiment.py  portfolio_tracker.py  scheduler.py  simple_test.py  simulator.py  test.py  trade_book.py
atlas_quant/brokers/: __init__.py  alpaca.py  base.py  (+2 more)
brokers/: alpaca.py  interactive_brokers.py  simulated.py
config/: features.yaml  settings.yaml  strategy.yaml
deployment/: configuration.py  deployment.yaml  run_live.py  run_paper.py
examples/: download_sp500.py  download_sp500_fixed.py  download_sp500_fixed2.py  download_sp500_fixed4.py  download_sp500_fixed5.py  paper_rebalance.py  test_alpaca_connection.py
monitoring/: alerts.py  dashboard.py  health.py  notifications.py  watchdog.py
persistence/: checkpoint.py  recovery.py  state_manager.py
tests/: test_alpaca_broker.py  test_alpaca_broker2.py  test_cache.py  test_downloader.py  test_loader.py  test_manager.py  test_reconciliation.py  test_reporting.py  test_validator.py
(+56 files in other folders)
