[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-quant"
version = "0.1.0"
description = "A modular quantitative research platform"
authors = []
dependencies = [
    "pandas",
    "numpy",
    "yfinance",
    "requests",
    "pydantic",
    "pyyaml",
    "tqdm",
    "rich",
    "loguru",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/atlas-quant"
